[project]
name = "hyperioncs"
version = "0.1.0"
description = "SaaS platform for building Discord pseudocurrencies."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite~=0.22.0",
    "alembic~=1.17.2",
    "authlib~=1.6.6",
    "fastapi~=0.126.0",
    "pydantic~=2.12.5",
    "pydantic-settings~=2.12.0",
    "sqlalchemy[asyncio]~=2.0.45",
    "starlette[full]~=0.50.0",
    "typer~=0.20.1",
    "uvicorn~=0.38.0",
]

[dependency-groups]
dev = ["ruff~=0.14.4"]

[tool.ruff.lint]
select = ["I"]
