[project]
name = "hyperioncs"
version = "0.1.0"
description = "SaaS platform for building Discord pseudocurrencies."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite~=0.22.1",
    "alembic~=1.18.4",
    "authlib~=1.6.9",
    "fastapi~=0.135.1",
    "pydantic~=2.12.5",
    "pydantic-settings~=2.13.1",
    "pyjwt[crypto]~=2.12.1",
    "sqlalchemy[asyncio]~=2.0.48",
    "starlette[full]~=0.52.1",
    "typer~=0.24.1",
    "uvicorn~=0.41.0",
]

[dependency-groups]
dev = ["ruff~=0.15.6"]

[tool.ruff.lint]
select = ["I"]
